<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:paddingBottom="8dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:background="@color/colorPrimaryTint4"
                tools:context=".widget.LocationSelector">

    <TextView
        android:id="@+id/triangle_indicator"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/AppTheme.TextAppearance.Smaller"
        android:text="@string/downward_triangle"
        android:textColor="@color/colorPrimaryTint10"/>

    <TextView
        android:id="@+id/prefix"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppTheme.TextAppearance.Small"
        android:text="@string/location_prefix_from"
        android:textColor="@color/colorPrimaryTint10"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/location_text"
        android:layout_toRightOf="@id/prefix"
        android:layout_toEndOf="@id/prefix"
        android:layout_toLeftOf="@id/triangle_indicator"
        android:layout_toStartOf="@id/triangle_indicator"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppTheme.TextAppearance.Medium"
        android:ellipsize="end"
        android:text="@string/current_location"
        android:textColor="@android:color/white"/>

</RelativeLayout>
